--- a/less/ideas.less
+++ b/less/ideas.less
@@ -1,4 +1,4 @@
-@import "less/bootstrap.less";
+@import "less/bootstrap/bootstrap.less";
 
 // ----------------------------------------
 //
@@ -29,44 +29,40 @@
 
     @font-face {
         font-family: 'DroidSerifRegular';
-        src: url('fonts/DroidSerif-Regular-webfont.eot');
-        src: url('fonts/DroidSerif-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-             url('fonts/DroidSerif-Regular-webfont.woff') format('woff'),
-             url('fonts/DroidSerif-Regular-webfont.ttf') format('truetype'),
-             url('fonts/DroidSerif-Regular-webfont.svg#DroidSerifRegular') format('svg');
+        src: url('{{ "DroidSerif-Regular-webfont.eot" | image_url }}');
+        src: url('{{ "DroidSerif-Regular-webfont.eot" | image_url }}?#iefix') format('embedded-opentype'),
+             url('{{ "DroidSerif-Regular-webfont.woff" | image_url }}') format('woff'),
+             url('{{ "DroidSerif-Regular-webfont.ttf" | image_url }}') format('truetype');
         font-weight: normal;
         font-style: normal;
     }
 
     @font-face {
         font-family: 'OpenSansRegular';
-        src: url('fonts/OpenSans-Regular-webfont.eot');
-        src: url('fonts/OpenSans-Regular-webfont.eot?#iefix') format('embedded-opentype'),
-             url('fonts/OpenSans-Regular-webfont.woff') format('woff'),
-             url('fonts/OpenSans-Regular-webfont.ttf') format('truetype'),
-             url('fonts/OpenSans-Regular-webfont.svg#OpenSansRegular') format('svg');
+        src: url('{{ "OpenSans-Regular-webfont.eot" | image_url }}');
+        src: url('{{ "OpenSans-Regular-webfont.eot" | image_url }}?#iefix') format('embedded-opentype'),
+             url('{{ "OpenSans-Regular-webfont.woff" | image_url }}') format('woff'),
+             url('{{ "OpenSans-Regular-webfont.ttf" | image_url }}') format('truetype');
         font-weight: normal;
         font-style: normal;
     }
 
     @font-face {
         font-family: 'OpenSansItalic';
-        src: url('fonts/OpenSans-Italic-webfont.eot');
-        src: url('fonts/OpenSans-Italic-webfont.eot?#iefix') format('embedded-opentype'),
-             url('fonts/OpenSans-Italic-webfont.woff') format('woff'),
-             url('fonts/OpenSans-Italic-webfont.ttf') format('truetype'),
-             url('fonts/OpenSans-Italic-webfont.svg#OpenSansItalic') format('svg');
+        src: url('{{ "OpenSans-Italic-webfont.eot" | image_url }}');
+        src: url('{{ "OpenSans-Italic-webfont.eot" | image_url }}#iefix') format('embedded-opentype'),
+             url('{{ "OpenSans-Italic-webfont.woff" | image_url }}') format('woff'),
+             url('{{ "OpenSans-Italic-webfont.ttf" | image_url }}') format('truetype');
         font-weight: normal;
         font-style: normal;
     }
 
     @font-face {
         font-family: 'OpenSansSemibold';
-        src: url('fonts/OpenSans-Semibold-webfont.eot');
-        src: url('fonts/OpenSans-Semibold-webfont.eot?#iefix') format('embedded-opentype'),
-             url('fonts/OpenSans-Semibold-webfont.woff') format('woff'),
-             url('fonts/OpenSans-Semibold-webfont.ttf') format('truetype'),
-             url('fonts/OpenSans-Semibold-webfont.svg#OpenSansSemibold') format('svg');
+        src: url('{{ "OpenSans-Semibold-webfont.eot" | image_url }}');
+        src: url('{{ "OpenSans-Semibold-webfont.eot" | image_url }}?#iefix') format('embedded-opentype'),
+             url('{{ "OpenSans-Semibold-webfont.woff" | image_url }}') format('woff'),
+             url('{{ "OpenSans-Semibold-webfont.ttf" | image_url }}') format('truetype');
         font-weight: normal;
         font-style: normal;
     }
@@ -79,7 +75,7 @@ html {
 }
 
 body {
-    background: url(../images/background.png) no-repeat top center @baseColor;
+    background: url('{{ "background.png" | image_url }}') no-repeat top center @baseColor;
     font-family: 'DroidSerifRegular';
     color: @grayDark;
 }
@@ -104,7 +100,7 @@ textarea { resize: vertical; }
     padding: 30px;
     border: 1px solid darken(@baseColor, 10%);
     border-radius: (4px);
-    box-shadow: (0 0 1px rgba(255,255,255,.8));
+    box-shadow: 0 0 1px rgba(255,255,255,.8);
 }
 
 #mast { width: 522px;
@@ -125,7 +121,7 @@ textarea { resize: vertical; }
     .content { margin: 15px 20px; }
     .interest { width: 480px; margin: 0 20px 10px 20px; border-top: 2px solid @complement; }
     #comments { margin: 15px 20px; padding: 0; border-top: 2px solid @complement; }
-    .comment-count { width: 55px; height: 40px; padding: 18px 5px 20px 5px; position: absolute; top: -5px; right: 12px; background: @baseColor; font-size: 25px; text-align: center; color: @white;  box-shadow: (0 2px 0 darken(@neutral, 18%));
+    .comment-count { width: 55px; height: 40px; padding: 18px 5px 20px 5px; position: absolute; top: -5px; right: 12px; background: @baseColor; font-size: 25px; text-align: center; color: @white;  box-shadow: 0 2px 0 darken(@neutral, 18%);
     a { color: @white; }}
 }
 
@@ -158,11 +154,11 @@ textarea { resize: vertical; }
     }
     .tip { width: 235px; float: left; position: relative; margin: 0; left: 0; top: 0;
         p { font-size: 12px; text-align: left; }
-        i { width: 10px; height: 17px; right: -10px; top: 7px; background: url(../images/alert-point-alt.png) 0 0 no-repeat; }}
+        i { width: 10px; height: 17px; right: -10px; top: 7px; background: url('{{ "alert-point-alt.png" | image_url }}') 0 0 no-repeat; }}
 }
 
 .meta {
-    width: 100%; float: left; position: relative; clear: left; background: url(../images/split.png) repeat-x darken(@neutral, 5%); border-top: 1px solid lighten(@neutral, 3%); color: @gray; font-size: 12px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-radius: 0px 0px 4px 4px; border-radius: 0px 0px 4px 4px; *margin-bottom: -15px;
+    width: 100%; float: left; position: relative; clear: left; background: url('{{ "../images/split.png" | image_url }}') repeat-x darken(@neutral, 5%); border-top: 1px solid lighten(@neutral, 3%); color: @gray; font-size: 12px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-radius: 0px 0px 4px 4px; border-radius: 0px 0px 4px 4px; *margin-bottom: -15px;
     .avatar { float: left; position: relative; margin: 10px 8px; }
     .author { float: left; position: relative; margin: 13px 0; font-size: 12px; }
 }
@@ -187,15 +183,15 @@ footer {
     }}
     a, .like-link { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px;
     &:hover { text-decoration: none; } }
-    .action-like, .like-link { background: url(../images/button-like.png) 0 2px no-repeat;
-    &:hover { cursor: pointer; background: url(../images/button-like-hover.png) 0 2px no-repeat; }}
-    .action-discuss { background: url(../images/button-discuss.png) 0 3px no-repeat; color: @gray;
-    &:hover { background: url(../images/button-discuss-hover.png) 0 3px no-repeat; }}
-    span.on { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px; background: url(../images/button-like-hover.png) 0 2px no-repeat; }
+    .action-like, .like-link { background: url('{{ "button-like.png" | image_url }}') 0 2px no-repeat;
+    &:hover { cursor: pointer; background: url('{{ "button-like-hover.png" | image_url }}') 0 2px no-repeat; }}
+    .action-discuss { background: url('{{ "button-discuss.png" | image_url }}') 0 3px no-repeat; color: @gray;
+    &:hover { background: url('{{ "button-discuss-hover.png" | image_url }}') 0 3px no-repeat; }}
+    span.on { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px; background: url('{{ "button-like-hover.png" | image_url }}') 0 2px no-repeat; }
 }
 
-.action-like, .like-link { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px; background: url(../images/button-like.png) 0 2px no-repeat; }
-.action-like:hover, .like-link:hover, .like-link.on, .action-like.on { cursor: pointer; background: url(../images/button-like-hover.png) 0 2px no-repeat; }
+.action-like, .like-link { *height: 30px; float: left; position: relative; margin: 5px 10px; padding-left: 22px; background: url('{{ "button-like.png" | image_url }}') 0 2px no-repeat; }
+.action-like:hover, .like-link:hover, .like-link.on, .action-like.on { cursor: pointer; background: url('{{ "button-like-hover.png" | image_url }}') 0 2px no-repeat; }
 
 #user-bar {
     float: left; position: relative; text-align: left;
@@ -226,7 +222,7 @@ body.ideas-show {
     .like-label { font-size: .5em; }
 
 #new-idea {
-    margin: 0 0 20px 0; float: left; position: relative; clear: left; padding: 0 0 20px 0; background: darken(@baseColor, 10%); border: 1px solid darken(@baseColor, 15%); box-shadow: (0 0 1px rgba(255,255,255,.3)); border-radius: (4px);
+    margin: 0 0 20px 0; float: left; position: relative; clear: left; padding: 0 0 20px 0; background: darken(@baseColor, 10%); border: 1px solid darken(@baseColor, 15%); box-shadow: 0 0 1px rgba(255,255,255,.3); border-radius: (4px);
     h3 { *width: 450px; margin: 20px 30px 0 30px; padding: 0; line-height: 1em; font-size: 1.5em; font-weight: normal; color: lighten(@complement, 15%); }
     fieldset { margin: 0 30px 0 30px;
         input { width: 510px; margin: 0;  }
@@ -261,7 +257,7 @@ time#expires-at {
   background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #2b303b), color-stop(1, #1a1d24));
   padding: 10px;
   .border-radius(6px);
-  .box-shadow(inset 0px 0px 7px rgba(0, 0, 0, 0.9));
+  box-shadow: inset 0px 0px 7px rgba(0, 0, 0, 0.9);
   width: auto;
   margin: 5px auto;
   .clearfix;
@@ -285,7 +281,7 @@ time#expires-at {
         font-family: monospace;
         margin-right: 3px;
         .border-radius(4px);
-        .box-shadow(0px 1px 4px rgba(0, 0, 0, 0.6));
+        box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.6);
         background-image: -moz-linear-gradient(top, #383838, black);
         background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0, #383838), color-stop(1, black));
         text-shadow: 0 -1px 1px black;
@@ -318,9 +314,9 @@ span.countdown_row {
 
   .auth { float: right; list-style-type: none; padding: 0;
       li { float: left; position: relative; margin: 0 0 4px 5px; padding: 0;
-          a { float: left; position: relative; display: block; padding: 6px 10px 5px 32px !important; .border-radius(3px); color: @white; .box-shadow(inset 0 1px 0 rgba(255,255,255,.2));
+          a { float: left; position: relative; display: block; padding: 6px 10px 5px 32px !important; .border-radius(3px); color: @white; box-shadow: inset 0 1px 0 rgba(255,255,255,.2);
               &:hover { text-decoration: none; }
-              span { position: absolute; top: 5px; left: 5px; width: 21px; height: 21px; background: url(../images/shapes.png);  }}
+              span { position: absolute; top: 5px; left: 5px; width: 21px; height: 21px; background: url('{{ "shapes.png" | image_url }}');  }}
           &.twitter a { background: #3B9FCE; #gradient > .vertical(#3B9FCE, #3183AA); border: 1px solid #2A779B; border-bottom: 2px solid #2A779B;
               &:hover { background: #62B2D7; #gradient > .vertical(#62B2D7, #3183AA); }
               span { background-position: 0; }}
@@ -332,7 +328,7 @@ span.countdown_row {
   .countdown-text { width: 100%; float: left; position: relative; text-align: center; color: @white; }
 
   .alert-message.tip { width: auto; position: absolute; padding: 6px 10px 8px 10px; top: 50px; right: -20px; z-index: 999; .close { color: #000; }
-      i { width: 17px; height: 10px; background: url(../images/alert-point.png) no-repeat; display: block; position: absolute; right: 115px; top: -10px; }}
+      i { width: 17px; height: 10px; background: url('{{ "alert-point.png" | image_url }}') no-repeat; display: block; position: absolute; right: 115px; top: -10px; }}
   .alert-message.tip p { font-size: 12px; line-height: 13px; color: @gray; text-align: left; margin-top: 2px; *padding-top: 5px; *font-size: 12px; text-align: center; }
 
 
@@ -371,16 +367,12 @@ h1.show {
     color: @complement;
 }
 
-#new-idea fieldset .checkarea { color: @neutral; margin-top: 12px; float: left; font-family: 'OpenSansRegular';
-    input { width: auto; margin-right: 10px; }
-}
-
 #comments-form .checkarea { margin-top: 12px; float: left; font-family: 'OpenSansRegular';
     input { width: auto; margin-right: 5px; }
 }
 
 
-.empty { float: left; position: relative; display: block; width: 100%;color: @gray; text-align: center; 
+.empty { float: left; position: relative; display: block; width: 100%;color: @gray; text-align: center;
   h1 { font-size: 2em; margin: 0 0 5px 0; color: @gray; }
   p { margin: 0; padding: 0; }
 }
@@ -399,7 +391,7 @@ h1.show {
   padding: 10px 12px 0 12px;
   text-align: center;
   border: 1px solid darken(@baseColor, 10%);
-  box-shadow: (0 0 1px rgba(255,255,255,.8));
+  box-shadow: 0 0 1px rgba(255,255,255,.8);
 
   a { float: left; position: relative; clear: left; margin-bottom: 6px; }
 
@@ -435,26 +427,26 @@ top: -38px;
     li {
       float: left;
       position: relative;
-      margin: 0 5px 0 0; 
+      margin: 0 5px 0 0;
       a {
         padding: 3px 7px 4px 20px;
         .border-radius(4px);
         &.all {
-          background: url(../images/icon-all.png) 5px center no-repeat;
+          background: url('{{ "icon-all.png" | image_url }}') 5px center no-repeat;
         }
         &.mine {
-          background: url(../images/icon-mine.png) 6px center no-repeat;
-        } 
+          background: url('{{ "icon-mine.png" | image_url }}') 6px center no-repeat;
+        }
         &.popular {
-          background: url(../images/icon-popular.png) 6px center no-repeat;
+          background: url('{{ "icon-popular.png" | image_url }}') 6px center no-repeat;
         }
         &.active, &:hover {
-          .box-shadow(inset 0 0 4px darken(@grayLight, 7%));
+          box-shadow: inset 0 0 4px darken(@grayLight, 7%);
         }
       }
     }
   }
-  .rss { float: right; position: relative; padding-left: 20px; background: url(../images/icon-feed.png) 6px center no-repeat; }
+  .rss { float: right; position: relative; padding-left: 20px; background: url('{{ "icon-feed.png" | image_url }}') 6px center no-repeat; }
 }
 
 label.error {
@@ -481,25 +473,25 @@ label.error {
     display: block;
     color: @gray;
   }
-    
+
   h1 {
     clear: left;
     margin-bottom: 0;
   }
-  
-  .input { 
+
+  .input {
     float: left;
     position: relative;
     clear: left;
     margin: 0;
   }
-  
+
   #idea_title {
     margin: 0 20px 15px 20px;
     width: 470px;
     clear: left;
   }
-  
+
   #idea_content {
     width: 470px;
     height: 400px;
@@ -509,19 +501,19 @@ label.error {
     margin: 0 0 15px 20px;
     left: 0;
   }
-  
+
   .submit {
     float: right;
     position: relative;
     clear: left;
     margin: 0 20px 0 0;
   }
-  
+
 }
 
 .logged-out {
     .action-like:hover {
-        background: url(../images/button-like.png) 0 2px no-repeat;cursor: default;
+        background: url('{{ "button-like.png" | image_url }}') 0 2px no-repeat;cursor: default;
     }
 }
 
@@ -544,3 +536,7 @@ label.error {
   background: rgba(0,0,0,0.7);
 }
 
+#new-idea fieldset .checkarea { color: @neutral; margin-top: 12px; float: left; font-family: 'OpenSansRegular';
+    input { width: auto; margin-right: 10px; }
+    label { color: @neutral; }
+}
