--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -124,7 +124,11 @@
                 <fieldset>
                     <input class="span4 required" id="idea_title" name="idea[title]" type="text" placeholder="{{theme.idea_context | capitalize}} title">
                     <div class="input"><textarea id="idea_content" name="idea[content]" rows="3" placeholder="Your {{theme.idea_context}}" class="required"></textarea></div>
-                    <div class="checkarea"><input type="checkbox" name="idea[should_post_to_social]" value="1" checked />share this {{theme.idea_context}} to {{ current_user.provider }}?</div>
+                    <div class="checkarea">
+                        <label style="width:auto;">
+                            <input type="checkbox" name="idea[should_post_to_social]" value="1" checked />share this {{theme.idea_context}} to {{ current_user.provider }}?
+                        </label>
+                    </div>
                     <input type="submit" value="add {{theme.idea_context}}" class="btn primary submit" />
                 </fieldset>
             </div>
