Protocol relative URL's for externally hosted libs

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="{{ asset_url }}/stylesheets/ideas.css">
 
     <!-- Scripts -->
-    <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
     {{ content_for_header }}
     <script src="/assets/jquery.countdown.min.js"></script>
     <script src="{{ asset_url }}/javascripts/jquery.validate.min.js"></script>
@@ -138,7 +138,7 @@
                 <a class="addthis_button_facebook_like" fb:like:layout="box_count"></a>
                 <a class="addthis_button_tweet" tw:count="vertical" tw:via="RusicHQ"></a>
                 <a class="addthis_button_google_plusone" g:plusone:size="tall"></a>
-                <script type="text/javascript" src="http://s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f0c4de422db2f2f"></script>
+                <script type="text/javascript" src="//s7.addthis.com/js/250/addthis_widget.js#pubid=xa-4f0c4de422db2f2f"></script>
             </div>
 
         </div> <!-- /wrapper -->
