--- a/less/ideas.less
+++ b/less/ideas.less
@@ -158,7 +158,7 @@ textarea { resize: vertical; }
 }
 
 .meta {
-    width: 100%; float: left; position: relative; clear: left; background: url('{{ "../images/split.png" | image_url }}') repeat-x darken(@neutral, 5%); border-top: 1px solid lighten(@neutral, 3%); color: @gray; font-size: 12px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-radius: 0px 0px 4px 4px; border-radius: 0px 0px 4px 4px; *margin-bottom: -15px;
+    width: 100%; float: left; position: relative; clear: left; background: url('{{ "split.png" | image_url }}') repeat-x darken(@neutral, 5%); border-top: 1px solid lighten(@neutral, 3%); color: @gray; font-size: 12px; -moz-border-radius-bottomright: 4px; -moz-border-radius-bottomleft: 4px; -webkit-border-radius: 0px 0px 4px 4px; border-radius: 0px 0px 4px 4px; *margin-bottom: -15px;
     .avatar { float: left; position: relative; margin: 10px 8px; }
     .author { float: left; position: relative; margin: 13px 0; font-size: 12px; }
 }
