Add in stylesheet in correct way

--- a/layouts/subdomain.html.liquid
+++ b/layouts/subdomain.html.liquid
@@ -32,7 +32,7 @@
     {% endif %}
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="{{ asset_url }}/stylesheets/ideas.css">
+    <link rel="stylesheet" href="{{ 'ideas.css' | stylesheet_url }}">
 
     <!-- Scripts -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/modernizr/2.0.6/modernizr.min.js"></script>
